fixed landing height on mobile, added X to close mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
 .App {
   max-width: 3000px;
   margin: 0 auto;
+  min-width: 325px;
   .App-inner {
     width: 100%;
     height: 100%;
