--- a/src/components/landing/landing.styles.scss
+++ b/src/components/landing/landing.styles.scss
@@ -1,5 +1,5 @@
 .landing {
-  height: calc(100vh - 80px);
+  // height: calc(100vh - 80px);
   min-height: 705px;
   max-height: 1250px;
   position: relative;
@@ -141,7 +141,11 @@
 @media only screen and (max-width: 415px) {
   .landing {
     .container {
+      padding: 2rem 0;
       .side-a {
+        h2 {
+          font-size: 1.5;
+        }
         .landing-cta {
           display: flex;
           flex-direction: column;
