--- a/src/components/sidebar/sidebar.styles.scss
+++ b/src/components/sidebar/sidebar.styles.scss
@@ -6,6 +6,7 @@
   height: 100%;
   width: 60%;
   max-width: 400px;
+  min-width: 230px;
   z-index: 200;
   display: flex;
   flex-direction: column;
@@ -13,8 +14,19 @@
   align-items: center;
   transform: translateX(100%);
   transition: transform 350ms ease-out;
+  visibility: hidden;
   &.open {
     transform: translateX(0);
+    visibility: visible;
+  }
+  .close {
+    position: absolute;
+    top: 10%;
+    right: 20%;
+    cursor: pointer;
+    font-size: 2rem;
+    color: #fff;
+    font-weight: 700;
   }
   ul {
     li {
